--- a/main.css
+++ b/main.css
@@ -64,6 +64,11 @@ ul.topnav li.right {
             text-shadow: 1px 1px #141414;
             background-color: #FF00E7;
     }
+    a.twitch {
+            color: white;
+            text-shadow: 1px 1px #141414;
+            background-color: #B000FF;
+    }      
 }
 .text {
     box-shadow: 8px 8px 35px -1px rgba(0,0,0,0.54);
@@ -182,7 +187,12 @@ li a:hover {
 .gatari:hover {
     color: white;
     text-shadow: 1px 1px #141414;
-    background-color: #FF00E7;      
+    background-color: #FF00E7;  
+}
+.twitch:hover {
+    color: white;
+    text-shadow: 1px 1px #141414;
+    background-color: #B000FF
 }
 /* end of social media section */
 .footer {
